modification de titre

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         </title>
     </head>
     <body>
-        <h1> uN SUPER TITLE</h1>
+        <h1> une SUPER TITLE</h1>
     </body>
 
 </html>
